# indi-diy-fw

./: ARDUINO_UPLOAD_GUIDE.md  CMakeLists.txt  diy_serial_fw.cpp
arduino_sketch/: filter_wheel.ino
